--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,37 @@
-*.pyc
-build/
-dist/
-*.egg-info/
+# Python / vim
+*py[co]
 *.sw[po]
+# Eclipse / Pydev
+.settings
+.project
+.pydevproject
+# Ignoring build dir
+/build
+/dist
+/*.egg-info/
+# Ignoring virtualenv
+/bin/
+/lib/
+/lib64
+/include/
+/local
+# Ignoring api doc
+/doc/_build
+# Ignoring tmp map files
+/*.png
+/*.html
+/*.js
+/*.css
+/*.json
+# Ignoring coverage reports
+/.coverage
+/coverage/htmlcov
+# Ignoring profiling reports
+/*.prof
+/*.lprof
+# Ignoring backuop files
+*.orig.*
+# Ignoring local tmp dir
+/tmpviz
+# Ignore coveralls.io file
+/.coveralls.yml
